Edit gitignore, bugs fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /test/
 /utils-old/
 /.idea
-output.gcode
-calibrace_contours.py
-povrh_test.py
+/output.gcode
+/calibrace_contours.py
+/povrh_test.py
+
